# EPUB-formater

./: .gitignore  LICENSE  README.md  book.epub  formater  makefile  pyproject.toml
src/: container_parse.c  container_parse.h  cover_info.py  cover_resize.py  css_helper.c  defines.h  formater.c  formator.py  lang.c  lang.h  language_change.c  language_change.h  main.py  opf_helper.c  opf_helper.h  override.css  test.py  zip_helper.c  zip_helper.h
src/epub_io/: container.py  cover.py  opf.py
src/io/: container.py  opf.py
src/operations/: cover_info.py  cover_resize.py  metadata.py
test_book.epub/OEBPS/: bk01-toc.xhtml  ch01.xhtml  ch02.xhtml  ch03.xhtml  ch04.xhtml  ch05.xhtml  ch06.xhtml  ch07.xhtml  ch08.xhtml  ch09.xhtml  ch10.xhtml  ch11.xhtml  index.xhtml  package.opf  pr01.xhtml  toc.ncx
